traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to (Unit)
      ecritMessage(posFinale())
      ^TraversalByColumn:9: warning: enclosing method posFinale has result type Unit: return value discarded
  return ((7 == getX()) && (getY() == 7))
  ^