traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  //while (posFinale() == false) {
    	posSuivante()
    	ecritMessage(posFinale())
  //}
}


def posFinale() {
  return ((7 == getX()) && (getY() == 7))
}



def posSuivante() {
  if (getY() == getMondeHauteur()) {
    	setPos((getX()+1), 0)
  }
  else {
  		setPos(getX(), (getY()+ 1))
  }
}